--- a/uabot-scenario-maker/scenarios/manual/App Store 2/AppStore_Traveller_free.json
+++ b/uabot-scenario-maker/scenarios/manual/App Store 2/AppStore_Traveller_free.json
@@ -3,12 +3,11 @@
 	"analyticsendpoint" : "https://usageanalytics.coveo.com/rest/v15/analytics/",
     "orgName": "fcotetrainingorg",
 	"randomGoodQueries": [ 
-		"minecraft", "mario", "super mario", "final fantasy", "world of goo", "plague", "clash", "war lord",  "star wars", "clash royale", "clash of clans", "pokemon go",
-		"magic the gathering", "dungeon and dragon", "rpg", "action shooter", "tower defender", "turret", "zombie", "plant zombie", "ninja", "playstation app", "candy crush", "angry birds", "love balls",
-		"marvel","group game", "party game", "puzzle", "brain game", "gravity"
+		"airbnb", "lyft", "Travel Guide", "craft beer","restaurant", "yelp", "booking", "trip", "uber", "map", "google maps", 
+		"travel", "city", "city tour", "city guide", "learning language", "wine", "beer", "Starbucks", "Wine Guide", "japanese", "food", "delivery", "road"
     ],
 	"randomBadQueries": [
-        "@minecraft", "mar io", "finm fantaisy", "world of poo", "pla uye", "dower tefender", "purret", "lombie", "minja", "play station natwork"
+        "hair bnb", "lift", "yhelp", "wyne", "city pour", "nine guide", "deli very"
     ],
     "allowAnonymousVisits"	: true,
     "anonymousThreshold" : 1,
@@ -19,11 +18,11 @@
     "randomCustomData": [
 		{
 			"apiname": "context_persona",
-			"values": ["Gamer"]
+			"values": ["Traveller"]
         },
         {
 			"apiname": "persona",
-			"values": ["Gamer"]
+			"values": ["Traveller"]
         },
         {
 			"apiname": "context_AppType",
