--- a/uabot-scenario-maker/scenarios/manual/App Store 2/AppStore_Gamer_paid.json
+++ b/uabot-scenario-maker/scenarios/manual/App Store 2/AppStore_Gamer_paid.json
@@ -3,15 +3,16 @@
 	"analyticsendpoint" : "https://usageanalytics.coveo.com/rest/v15/analytics/",
     "orgName": "fcotetrainingorg",
 	"randomGoodQueries": [ 
-		"minecraft", "final fantasy", "plague", "clash",
-		"magic the gathering", "dungeon and dragon", "rpg", "action shooter", "tower defender", "turret", "zombie", "ninja"
+		"minecraft", "final fantasy", "plague", "clash", "war lord",
+		"magic the gathering", "dungeon and dragon", "rpg", "action shooter", "tower defender", "turret", "zombie", "ninja", "angry birds", "love balls",
+		"marvel","group game", "party game", "puzzle", "brain game", "gravity"
     ],
 	"randomBadQueries": [
         "@minecraft", "mar io", "finm fantaisy", "world of poo", "pla uye", "dower tefender", "purret", "lombie", "minja", "play station natwork"
     ],
     "allowAnonymousVisits"	: true,
     "anonymousThreshold" : 1,
-    "timeBetweenVisits": 2,
+    "timeBetweenVisits": 20,
     "timeBetweenActions": 1,
     "pipeline": "default",
     "defaultOriginLevel1": "Demo",
@@ -26,11 +27,11 @@
         },
         {
 			"apiname": "context_AppType",
-			"values": ["free"]
+			"values": ["paid"]
 		},
 		{
 			"apiname": "AppType",
-			"values": ["free"]
+			"values": ["paid"]
 		},
 		{
 			"apiname": "isbot", "values": ["true"]
@@ -49,6 +50,13 @@
                         "originLevel1" : "Demo",
                         "originLevel2" : "App Store"
                     }
+				},
+				{
+                    "type": "Search",
+                    "arguments": {
+                        "queryText": "",
+                        "goodQuery": false
+                    }
                 },
                 {
                     "type": "Search",
@@ -72,6 +80,99 @@
 						"offset": 15,
 						"probability": 0.65
 					}
+                },
+                {
+					"type": "Click",
+					"arguments": {
+						"docNo": -1,
+						"offset": 12,
+						"probability": 0.55
+					}
+				},
+                {
+					"type": "View",
+					"arguments": {
+						"docNo": -1,
+						"offset": 12,
+						"probability": 0.55
+					}
+                },
+                {
+					"type": "Click",
+					"arguments": {
+						"docNo": -1,
+						"offset": 9,
+						"probability": 0.45
+					}
+				},
+                {
+					"type": "View",
+					"arguments": {
+						"docNo": -1,
+						"offset": 9,
+						"probability": 0.45
+					}
+                },
+                {
+					"type": "Click",
+					"arguments": {
+						"docNo": -1,
+						"offset": 7,
+						"probability": 0.35
+					}
+				},
+                {
+					"type": "View",
+					"arguments": {
+						"docNo": -1,
+						"offset": 7,
+						"probability": 0.35
+					}
+                },
+                {
+					"type": "Click",
+					"arguments": {
+						"docNo": -1,
+						"offset": 5,
+						"probability": 0.25
+					}
+				},
+                {
+					"type": "View",
+					"arguments": {
+						"docNo": -1,
+						"offset": 5,
+						"probability": 0.25
+					}
+                },                {
+                    "type": "Search",
+                    "arguments": {
+                        "queryText": "",
+                        "goodQuery": true
+                    }
+                },
+                {
+					"type": "Click",
+					"arguments": {
+						"docNo": -1,
+						"offset": 15,
+						"probability": 0.65
+					}
+				},
+                {
+					"type": "View",
+					"arguments": {
+						"docNo": -1,
+						"offset": 15,
+						"probability": 0.65
+					}
+				},
+				{
+                    "type": "Search",
+                    "arguments": {
+                        "queryText": "",
+                        "goodQuery": true
+                    }
                 },
                 {
 					"type": "Click",
@@ -432,6 +533,13 @@
 						"offset": 12,
 						"probability": 0.55
 					}
+				},
+				{
+                    "type": "Search",
+                    "arguments": {
+                        "queryText": "",
+                        "goodQuery": true
+                    }
                 },
                 {
 					"type": "Click",
@@ -502,92 +610,13 @@
 						"offset": 15,
 						"probability": 0.65
 					}
-                },
-                {
-					"type": "Click",
-					"arguments": {
-						"docNo": -1,
-						"offset": 12,
-						"probability": 0.55
-					}
 				},
-                {
-					"type": "View",
-					"arguments": {
-						"docNo": -1,
-						"offset": 12,
-						"probability": 0.55
-					}
-                },
-                {
-					"type": "Click",
-					"arguments": {
-						"docNo": -1,
-						"offset": 9,
-						"probability": 0.45
-					}
-				},
-                {
-					"type": "View",
-					"arguments": {
-						"docNo": -1,
-						"offset": 9,
-						"probability": 0.45
-					}
-                },
-                {
-					"type": "Click",
-					"arguments": {
-						"docNo": -1,
-						"offset": 7,
-						"probability": 0.35
-					}
-				},
-                {
-					"type": "View",
-					"arguments": {
-						"docNo": -1,
-						"offset": 7,
-						"probability": 0.35
-					}
-                },
-                {
-					"type": "Click",
-					"arguments": {
-						"docNo": -1,
-						"offset": 5,
-						"probability": 0.25
-					}
-				},
-                {
-					"type": "View",
-					"arguments": {
-						"docNo": -1,
-						"offset": 5,
-						"probability": 0.25
-					}
-                },                {
+				{
                     "type": "Search",
                     "arguments": {
                         "queryText": "",
                         "goodQuery": true
                     }
-                },
-                {
-					"type": "Click",
-					"arguments": {
-						"docNo": -1,
-						"offset": 15,
-						"probability": 0.65
-					}
-				},
-                {
-					"type": "View",
-					"arguments": {
-						"docNo": -1,
-						"offset": 15,
-						"probability": 0.65
-					}
                 },
                 {
 					"type": "Click",
