--- a/uabot-scenario-maker/scenarios/manual/App Store 2/AppStore_Hipster_free.json
+++ b/uabot-scenario-maker/scenarios/manual/App Store 2/AppStore_Hipster_free.json
@@ -3,12 +3,11 @@
 	"analyticsendpoint" : "https://usageanalytics.coveo.com/rest/v15/analytics/",
     "orgName": "fcotetrainingorg",
 	"randomGoodQueries": [ 
-		"minecraft", "mario", "super mario", "final fantasy", "world of goo", "plague", "clash", "war lord",  "star wars", "clash royale", "clash of clans", "pokemon go",
-		"magic the gathering", "dungeon and dragon", "rpg", "action shooter", "tower defender", "turret", "zombie", "plant zombie", "ninja", "playstation app", "candy crush", "angry birds", "love balls",
-		"marvel","group game", "party game", "puzzle", "brain game", "gravity"
+		"imovie", "culture", "netflix", "hulu", "google photos", "photo", "photo editing", "youtube", "photo editor", 
+		"video", "video manager", "editor", "converter", "editing", "magazine", "dating", "hair", "stream", "streaming", "tv", "tube"
     ],
 	"randomBadQueries": [
-        "@minecraft", "mar io", "finm fantaisy", "world of poo", "pla uye", "dower tefender", "purret", "lombie", "minja", "play station natwork"
+        "cult", "net flick", "ulu", "editincg", "mag-a-zine", "date ing", "air"
     ],
     "allowAnonymousVisits"	: true,
     "anonymousThreshold" : 1,
@@ -19,11 +18,11 @@
     "randomCustomData": [
 		{
 			"apiname": "context_persona",
-			"values": ["Gamer"]
+			"values": ["Hipster"]
         },
         {
 			"apiname": "persona",
-			"values": ["Gamer"]
+			"values": ["Hipster"]
         },
         {
 			"apiname": "context_AppType",
@@ -37,7 +36,7 @@
 			"apiname": "isbot", "values": ["true"]
 		}
     ],
-	"globalFilter":"@appisfree=true AND @appcategory=Games",
+	"globalFilter":"@appisfree=true AND (@appcategory=Lifestyle OR @appcategory=Entertainment OR @appcategory=Photo & Video)",
     "scenarios" :[
         {
 			"name": "Random Good Query on the App Store Tab",
