--- a/uabot-scenario-maker/scenarios/manual/App Store 2/AppStore_Traveler_free.json
+++ b/uabot-scenario-maker/scenarios/manual/App Store 2/AppStore_Traveler_free.json
@@ -18,11 +18,11 @@
     "randomCustomData": [
 		{
 			"apiname": "context_persona",
-			"values": ["Traveller"]
+			"values": ["Traveler"]
         },
         {
 			"apiname": "persona",
-			"values": ["Traveller"]
+			"values": ["Traveler"]
         },
         {
 			"apiname": "context_AppType",
